apps/rails-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rails-web
  template:
    metadata:
      labels:
        app: rails-web
    spec:
      containers:
      - name: rails-container
        image: docker.io/ivaylob84/rails-gallery:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
  namespace: default
spec:
  selector:
    app: rails-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-rails-prefix@kubernetes
spec:
  rules:
  - http:
      paths:
      - path: /rails
        pathType: Prefix
        backend:
          service:
            name: rails-app-service
            port:
              number: 80
